# Sistemas-Distribuidos

RPC/: CMakeLists.txt  clientManager.cpp  clientManager.h  main.cpp  persona.cpp  persona.h  personaDistribuida.cpp  server.cpp
fileManager/: CMakeLists.txt  broker.cpp  client.cpp  clientManager.cpp  clientManager.h  dirClient  fileManagerDistribuido.cpp  filemanager.h  main_fm.cpp  server.cpp  server2.cpp  utils.cpp  utils.h
fileManager/dirCliente/: prueb1.txt
fileManager/dirCliente2/: client  prueb3.txt  prueb4.txt
fileManager/dirServer/: prueb2.txt  server  server1.txt  server2.txt
fileManager/dirServer2/: server  server2  server3.txt  server4.txt
